update project, update prefix, fix tests

--- a/applications/date-picker-test/src/index.html
+++ b/applications/date-picker-test/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <md-root></md-root>
+  <mdak-root></mdak-root>
 </body>
 </html>
