initial scope naming update

--- a/applications/cascading-windows/src/index.html
+++ b/applications/cascading-windows/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MDAK Cascading Windows</title>
+  <title>NSSD Cascading Windows</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
 </head>
 
 <body>
-  <mdak-root></mdak-root>
+  <nssd-root></nssd-root>
 </body>
 </html>
