--- a/applications/modal-windows/src/index.html
+++ b/applications/modal-windows/src/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MDAK Modal Windows</title>
+    <title>NSSD Modal Windows</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="favicon.ico" rel="icon" type="image/x-icon">
 </head>
 
 <body>
-    <mdak-root></mdak-root>
+    <nssd-root></nssd-root>
 </body>
 
 </html>
