--- a/applications/random-app/src/index.html
+++ b/applications/random-app/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <md-tutorial-root></md-tutorial-root>
+  <nssd-root></md-tutorial-root>
 </body>
 </html>
